# blue-koala

./: .gitignore  README.md
backend/: .env  base_prompt.txt  execute_commands.py  pyproject.toml  stream.py
backend/api/: .env  app.py
backend/api/.chroma/index/: id_to_uuid_c3df778e-f888-423e-9e45-ef3b17547c19.pkl  uuid_to_id_c3df778e-f888-423e-9e45-ef3b17547c19.pkl
backend/client/chromadb/: chroma-collections.parquet  chroma-embeddings.parquet
backend/client/chromadb/index/: id_to_uuid_03eda6a9-26d4-4261-aa1d-cf56c73980d8.pkl  index_metadata_03eda6a9-26d4-4261-aa1d-cf56c73980d8.pkl  uuid_to_id_03eda6a9-26d4-4261-aa1d-cf56c73980d8.pkl
backend/client/filename/: filename.json
backend/test/: upload_file.py
backend/utils/: callback.py  chromadb_manager.py  pinecone_manager.py  prompts.py  query_data.py  schemas.py  utils.py
contractqa/: stream.py
contractqa/api/.chroma/index/: index_metadata_c3df778e-f888-423e-9e45-ef3b17547c19.pkl
contractqa/utils/: callback.py  query_data.py  utils.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  App.module.css
frontend/src/components/chatCard/: ChatCard.jsx
frontend/src/components/displayMessages/: DisplayMessages.jsx
frontend/src/components/fileUpload/: FileUploadCard.jsx
frontend/src/components/navBar/: NavBar.jsx
frontend/src/components/userTerminal/: UserTerminal.css  UserTerminal.jsx  handlers.js
frontend/src/pages/: Home.js
